[main] - Solved login visual issue now the login page shows exactly how it should be showing the content even if it is zoomed in too much, the background photo doesn't break anymore

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -13,7 +13,6 @@
 
 .form-login {
     position: relative;
-    top: 20vh;
     background: orange;
     padding: 40px;
     border-radius: 10px;
@@ -31,6 +30,11 @@
 
 .back-button:hover {
     color:black;
+}
+
+.main-container {
+    overflow-y: auto;
+    height: 100%;
 }
 
 
